# am4

./: .gitattributes  .gitignore  Cargo.toml  README.md  am4-web-2c503ecb02fe1824.js  am4-web-2c503ecb02fe1824_bg.wasm  am4-web-7f9ca1328cfa189f.js  am4-web-7f9ca1328cfa189f_bg.wasm  am4-web-839e773b6b89efb1.js  am4-web-839e773b6b89efb1_bg.wasm  app.module-2f67de2e3ed73ac1.css  app.module-dd64c29d6a6eeb74.css  index.html  justfile  mkdocs.yml  pyproject.toml  sw.js
.github/workflows/: ci-rust.yml  deploy.yml  docs.yml
am4/: Cargo.toml  README.md
am4-app/src/: main.rs
am4-dist/: am4-web-41dc21156d1bf35d.js  am4-web-41dc21156d1bf35d_bg.wasm  am4-web-72d5fea5c2142d95.js  am4-web-72d5fea5c2142d95_bg.wasm  am4-web-bf314de28cfd4bb7.js  am4-web-bf314de28cfd4bb7_bg.wasm  am4-web-d63c313d21921d03.js  am4-web-d63c313d21921d03_bg.wasm  app.module-1493d6c7158d964c.css  app.module-1da41e897e7938ef.css  app.module-329d4fc41383d85e.css  app.module-5d9784da02e96fcc.css  app.module-77a94a4601b5b0ae.css  app.module-7f467a8db4f1b94.css  app.module-88aad529ffa1d2f2.css  app.module-9e0e392d9b6c5f5b.css  app.module-b5bdf71c7cbba7c1.css  app.module-f13eb5f55ab1933d.css  app.module-fcc3ffec144e3fde.css  index.html  manifest.json  sw.js  vercel.json
am4-web/: Cargo.toml  Trunk.toml  _headers  index.html  manifest.json  vercel-build.sh  vercel.json
am4-web/src/: app.module.scss  console.rs  db.rs  lib.rs  main.rs
am4-web/src/components/: aircraft.rs  airport.rs  console.rs  help.rs  icons.rs  mod.rs  nav.rs  route.rs  search.rs  settings.rs
am4/src/: lib.rs  user.rs  utils.rs
am4/src/aircraft/: custom.rs  db.rs  mod.rs
am4/src/airport/: db.rs  mod.rs
am4/src/route/: ci.rs  db.rs  distance.rs  metrics.rs  mod.rs  speed.rs  ticket.rs  time.rs
am4/src/route/config/: cargo.rs  mod.rs  pax.rs
am4/src/route/demand/: pax.rs
am4/src/route/search/: ferry.rs  mod.rs  schedule.rs  stopover.rs
am4/tests/: aircraft.rs
docs/: formulae.md  index.md  quick_reference.md
docs/assets/: aircrafts.csv
docs/guides/: demand.md
misc/scripts/: gen_pwa.py
misc/scripts/prepare_data/: Cargo.toml
misc/scripts/prepare_data/src/: main.rs  utils.rs
scripts/: generate_logo.sh  generate_pwa_sw.py  hub_search.py
scripts/prepare_data/: Cargo.toml
scripts/prepare_data/src/: ac_image.rs  main.rs
src/am4/: common.py
src/am4/api/: fapi.py  models.py
src/am4/bot/: __init__.py  converters.py  errors.py  utils.py
src/am4/bot/cogs/: help.py  price.py  route.py  routes.py  settings.py
src/am4/utils/_official_api/models/: alliance.py  core.py  user.py
src/am4/utils/cpp/: db.cpp  route.cpp
src/am4/utils/cpp/include/: db.hpp  route.hpp
src/am4/utils/data/: aircrafts.parquet
src/am4/utils/stubs/utils/: __init__.pyi  aircraft.pyi  airport.pyi  demand.pyi  game.pyi  log.pyi  route.pyi  ticket.pyi
src/am4/utils/tests/: test_aircraft.py  test_route.py
(+2 files in other folders)
