[package]
name = "am4-web"
version = "0.2.0+alpha.11"
edition = "2021"

[dependencies]
am4 = { path = "../am4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
indexed_db_futures = "0.6.0"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
# we are using uuids in <For key={}> which is not performant.
# TODO: properly build hash using inputs/outputs
uuid = { version = "1.10.0", features = ["v4", "js"] }
leptos = { version = "0.8.15", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "DomException",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlAnchorElement",
    "Response",
    "Blob",
    "BlobPropertyBag",
    "Window",
    "Storage",
    "Performance",
    "Url",
]

[package.metadata.leptos]
lib-profile-release = "wasm-release"

[[package.metadata.trunk.hooks]]
stage = "post_build"
command = "uv"
command_arguments = ["run", "../scripts/generate_pwa_sw.py"]
