[package]
name = "am4"
version = "0.2.0-alpha.5"
authors = ["Abraham Cheung <abraham@ylcheung.com>"]
edition = "2021"

[dependencies]
jaro_winkler = "0.1.0"
thiserror = "2"
once_cell = "1.19.0"
uuid = { version = "1.10.0", features = ["v4"] }
derive_more = { version = "2", features = [
    "display",
    "add",
    "from",
    "into",
    "constructor",
] }
serde = { version = "1.0", optional = true, features = ["derive"] }
rkyv = { version = "0.8.12", optional = true, features = ["bytecheck"] }

[features]
default = ["rkyv"]
serde = ["dep:serde", "uuid/serde"]
rkyv = ["dep:rkyv"]

[dev-dependencies]
rstest = "0.26.1"
