[package]
name = "prepare_data"
version = "0.1.0"
edition = "2021"

[dependencies]
am4 = { path = "../../../am4" }
image = "0.25.1"
polars = { version = "0.52.0", features = [
    "lazy",
    "dtype-u16",
    "dtype-u8",
    "parquet",
    "timezones",
    "csv",
] }
reqwest = { version = "0.12.5", features = ["blocking"] }
rkyv = "0.8.12"
thiserror = "2"
webp = "0.3.0"
